log
Thu Mar 17 14:22:22 HSP 2022: 
 tests:  0|6
total_score: 0/70
0f13886
Thu Mar 17 14:31:16 HSP 2022: 
 list.c | 36 +++++++++++++++++++++++++++++++-----
 1 file changed, 31 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:19: error: comparison between pointer and integer [-Werror]
   if (!list->head == NULL) return NULL;
                   ^~
list.c: In function 'pushFront':
list.c:75:18: error: comparison between pointer and integer [-Werror]
   if(!list->head == NULL) list->head->prev = nuevo;
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
49a7513
Thu Mar 17 14:33:32 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:22: error: comparison between pointer and integer [-Werror]
   if (!list->current == NULL) return NULL;
                      ^~
list.c: In function 'pushFront':
list.c:75:18: error: comparison between pointer and integer [-Werror]
   if(!list->head == NULL) list->head->prev = nuevo;
                  ^~
cc1.exe: all warnings being treated as errors
Compilation failed
7d51fd7
Thu Mar 17 14:34:28 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8bf1c7a
Thu Mar 17 14:42:42 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
40cfba9
Thu Mar 17 14:45:34 HSP 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
37eafeb
Thu Mar 17 14:50:49 HSP 2022: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
b0a3377
